# spdlog

./: CMakeLists.txt
cmake/: ide.cmake  utils.cmake
example/: CMakeLists.txt
